# dwd_rain_radar

./: Cargo.toml
coordinates_mapper/: Cargo.toml
coordinates_mapper/src/: lib.rs
rain_radar_values/: Cargo.toml
rain_radar_values/src/: compressed_rain_radar_values.rs  cross_product.rs  dwd_rain_radar_values.rs  lib.rs  rain_radar_values.rs
rain_radar_values/src/helpers/: cross_product.rs  local_file_analysis.rs  mod.rs
