[package]
name = "rain_radar_values"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bmp = "0.5.0"
bzip2 = "0.4.3"
chrono = { version = "0.4", default-features = false, features = [ "std", "clock" ] }
ctrlc = "3"
rayon = { version = "1", default-features = false, optional = true }
reqwest = { version = "0.11.10", optional = true, default-features = false }
tar = { version = "0.4.38", default-features = false }

[features]
dwd_downloader = [ "reqwest", "reqwest/blocking", "reqwest/default-tls" ]
downloads_analyzer = [ "rayon" ]

[[bin]]
name = "dwd_downloader"
required-features = [ "dwd_downloader" ]

[[bin]]
name = "downloads_analyzer"
required-features = [ "downloads_analyzer" ]
