[package]
name = "rain_radar_values"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bmp = "0.5.0"
bzip2 = "0.4.3"
chrono = { version = "0.4", default-features = false, features = [ "std", "clock" ] }
ctrlc = "3"
lazy_static = { version = "1.4.0", optional = true }
rand = { version = "0.8.5", optional = true }
rayon = { version = "1", default-features = false, optional = true }
reqwest = { version = "0.11.10", optional = true, default-features = false }
rust-lzma = "0.5.1"
tar = { version = "0.4.38", default-features = false }

[dev-dependencies]
lazy_static = { version = "1.4.0" }
rand = { version = "0.8.5" }

[features]
dwd_downloader = [ "reqwest", "reqwest/blocking", "reqwest/default-tls" ]
downloads_analyzer = [ "rayon", "local_file_analysis" ]
compress_test = [ "rayon", "local_file_analysis" ]
local_file_analysis = [ "lazy_static", "rand" ]

[[bin]]
name = "dwd_downloader"
required-features = [ "dwd_downloader" ]

[[bin]]
name = "downloads_analyzer"
required-features = [ "downloads_analyzer" ]

[[bin]]
name = "compress_test"
required-features = [ "compress_test" ]
